objects/Panel_Event__e.object
<CustomObject>
    <description>Events coming from a Cirrus Solar panel.</description>
    <fields>
        <fullName>active_cells__c</fullName>
        <description>The number of cells producing current on the panel.</description>
        <label>active_cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>air_temp__c</fullName>
        <description>Outside air temperature around the solar panel.</description>
        <label>air_temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>error_code__c</fullName>
        <description>Errors generated by the solar panel.</description>
        <label>error_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internal_temp__c</fullName>
        <description>Temperature inside the solar panel housing.</description>
        <label>internal_temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <description>Solar panel model name.</description>
        <label>model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>power_output__c</fullName>
        <description>Total power output of the cell measured in watts.</description>
        <label>power_output</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <description>Panel serial number.</description>
        <label>serial_no</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>series__c</fullName>
        <description>Solar panel series name.</description>
        <label>series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Panel Event</label>
    <pluralLabel>Panel Events</pluralLabel>
</CustomObject>